# trends-demo

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  ReadMe.md  db.sqlite3  docker-compose.yaml  lfs-files.txt  manage.py  pyproject.toml  requirements.txt  test.ipynb
home/: admin.py  forms.py  models.py  urls.py  views.py
home/helper/: __init__.py  print.py  process.py  replacement_rules.json  temp.ipynb  transform.py  trends.py
home/helper/data/nyt/: aug1.csv  dec1.csv  dec2.csv  jan1.csv
home/helper/trends/: __init__.py
home/helper/trends/healthcare/: __init__.py  create.py  generate.py  reverse.py  words.json
home/helper/trends/healthcare/data/: 2016.csv  2017.csv  2018.csv  2019.csv  full.csv
home/helper/trends/healthcare/models/: 2016.model  2017.model  2018.model  2019.model
home/helper/trends/nursing/: clean.py  create.py  generate.py  reverse.py
home/helper/trends/nyt/: __init__.py  create.py  generate.py  reverse.py  reverse_emb.py  reverse_nyt.py  words.json
home/helper/trends/nyt/data/: aug1.csv  aug2.csv  dec1.csv  dec2.csv  (+3 more)
home/static/assets/css/: main.css
home/static/assets/js/: breakpoints.min.js  bs-autocomplete.js  reverse.js  similar.js  update-graph.js  update-rev.js  vis-csv.js  vis.js
home/static/csv/: graph-data.csv  test-val1-val2.csv
home/templates/: about-us.html  d3_chart_example.html  element-ref.html  elements.html  generic.html  index.html  method.html  ref.html
home/tests/helper/: tests_transform.py
src/trends_demo.egg-info/: PKG-INFO  SOURCES.txt
trends/: asgi.py  settings.py  urls.py  wsgi.py
(+9 files in other folders)
