[project]
name = "trends-demo"
version = "0.1.0"
description = "This is a Django project that aims to create a web application that can predict the future trends of a given topic."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.1.3",
    "gensim>=4.3.3",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "django-widget-tweaks==1.5.0",
    "polars>=1.12.0",
    "spacy>=3.7.5",
]
